5교시 전체 백업

--- a/JavaProject240228/src/ex_240306/.gitignore
+++ b/JavaProject240228/src/ex_240306/.gitignore
@@ -3,3 +3,7 @@
 /Ex_01_try_class_boygroup_inheritance_1.class
 /Ex_02_static_1.class
 /A.class
+/Ex_03_inheritance_1.class
+/A2.class
+/B.class
+/C.class
