6교시 인터페이스/설계/메인 파일 3개 추가

--- a/JavaProject240228/src/ex_240306/.gitignore
+++ b/JavaProject240228/src/ex_240306/.gitignore
@@ -7,3 +7,9 @@
 /A2.class
 /B.class
 /C.class
+/Idol_abstract.class
+/Ex_04_abstract_1.class
+/Ex_04_abstract_1_main.class
+/Ex_05_interface_1.class
+/Ex_05_interface_subClass_1.class
+/Ex_05_interface_main_1.class
