상속 확인 메모

--- a/JavaProject240228/src/ex_240306/.gitignore
+++ b/JavaProject240228/src/ex_240306/.gitignore
@@ -13,3 +13,8 @@
 /Ex_05_interface_1.class
 /Ex_05_interface_subClass_1.class
 /Ex_05_interface_main_1.class
+/test1.class
+/test2.class
+/test3.class
+/Ex_06_interface_main_2.class
+/Ex_06_interface_subClass_2.class
