7교시, 8교시 자율학습

--- a/JavaProject240228/src/ex_240306/.gitignore
+++ b/JavaProject240228/src/ex_240306/.gitignore
@@ -18,3 +18,6 @@
 /test3.class
 /Ex_06_interface_main_2.class
 /Ex_06_interface_subClass_2.class
+/singer.class
+/Ex_07_interface_main_3.class
+/Ex_07_interface_subClass_3.class
