미니 프로젝트, 수행평가

--- a/JavaProject240228/src/Mini_project/.gitignore
+++ b/JavaProject240228/src/Mini_project/.gitignore
@@ -3,3 +3,8 @@
 /PianoKeyboard$KeyButtonListener.class
 /PianoKeyboard$1.class
 /PianoKeyboard$2.class
+/OctavePianoKeyboard.class
+/WhiteKey.class
+/BlackKey.class
+/SoundUtil.class
+/WAVPlayer.class
